# simplest-stopwatch

./: .gitignore  CMakeLists.txt  main  main.cpp  timer.cpp
stopwatch/: CMakeLists.txt  stopwatch.cpp  stopwatch.hpp
